<resources>
    <string name="app_name">Najot ilmda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_login">Kirish</string>
    <string name="str_skip">O\'tkazib yuborish</string>

    <string name="str_discover_books_you_i">Butun olamni kashf eting</string>
    <string name="str_find_millions_of_the">Kundalik natijalaringizni hisoblab boring</string>

    <string name="str_welcome_back">Xush kelibsiz!</string>
    <string name="str_sign_in_to_continue">Shaxsiy akkauntingizga kiring!</string>
    <string name="str_phone_number">Foydalanuvchi nomi</string>
    <string name="str_password">Parol</string>
    <string name="str_forgot_password">Parolni unutdingizmi?</string>
    <string name="str_remember_me">Eslab qolish</string>
    <string name="str_dont_have_an_account">Ro\'yxatdan o\'tishni xohlaysizmi?</string>
</resources>